tolk-tester/tests/invalid-syntax/err-3003.tolk
tolk 1.fun

/**
@compilation_should_fail
@stderr expected semver, like `tolk 1.2`, got `fun`
 */
